# jarvis-voice-assistant

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  LICENSE  README.md  SETUP.md  actions.py  activity_log.py  appointment_briefing.py  belegsortierung.py  birthday_drafts.py  bring_tools.py  browser_tools.py  business_context.example.md  config.example.json  contact_sync.py  contacts.py  contacts_carddav.py  conversation.py  followup_tracker.py  gmail_tools.py  google_calendar_tools.py  google_contacts_tools.py  health_tools.py  holidays.py  image_tools.py  imap_mail_tools.py  inbox_analyzer.py  invoice_detector.py  jarvis.service  jarvis_quotes.py  mail_actions.py  mail_intelligence.py  mail_monitor.py  mail_tools.py  mail_triage.py  mail_triage_rules.example.json  mail_triage_rules.json  (+33 more)
docs/: architecture.md  jarvis_funktionsuebersicht_2026-05-06.html
frontend/: admin.html  index.html  main.js  manifest.json  style.css
scripts/: check_duplicates.py  clap-trigger.py  gen-cert.sh  google-auth.py  install-pi.sh  jarvis-deploy.command  jarvis-restart.sh  jarvis-update.service  jarvis-update.sh  jarvis-update.timer  jarvis.service  launch-session.ps1  launch-session.sh  set_todoist_section.py  setup_picnic.py  wakeword-trigger.py
src/: main.py
tests/: conftest.py  test_actions_integration.py  test_appointment_briefing_v2.py  test_belegsortierung_triage.py  test_browser_safety.py  test_calendar_invite.py  test_combined_evening_scheduler.py  test_conversation_async.py  test_einkauf_triage.py  test_full_context_block.py  test_holidays.py  (+10 more)
(+1 files in other folders)
