[project]
name = "jarvis"
version = "0.1.0"
description = "Projekt-Projekt, erstellt mit dem Pandora Wizard. Ich möchte einen persönlichen Assistenten mit Sprachaus- und eingäbe Nach J.A.R.V.I.S. Vorbild erstellen. Der Anfang liegt bereits unter https://github.com/LadyLogicflow/jarvis-voice-assistant Ich möchte einen persönlichen Assistenten mit Sprachaus- und eingäbe Nach J.A.R.V.I.S. Vorbild erstellen. Der Anfang liegt bereits unter https://github.com/LadyLogicflow/jarvis-voice-assistant Konfiguration: custom desc: provided, custom complexity: unknown"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
